feat: database initial setup

--- a/src/NeedleWork.API/appsettings.json
+++ b/src/NeedleWork.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NeedleWorkCs": "Server=localhost;Database=NeedleWorkDb;User Id=sa;Password=Camundongo@123; TrustServerCertificate=True"
+  }
 }
