--- a/src/NeedleWork.Application/NeedleWork.Application.csproj
+++ b/src/NeedleWork.Application/NeedleWork.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NeedleWork.Core\NeedleWork.Core.csproj" />
+  </ItemGroup>
+
 </Project>
