--- a/test/NeedleWork.UnitTests/NeedleWork.UnitTests.csproj
+++ b/test/NeedleWork.UnitTests/NeedleWork.UnitTests.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="NSubstitute" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\NeedleWork.Core\NeedleWork.Core.csproj" />
+    <ProjectReference Include="..\..\src\NeedleWork.Application\NeedleWork.Application.csproj" />
   </ItemGroup>
 
 </Project>
