--- a/src/NeedleWork.Application/NeedleWork.Application.csproj
+++ b/src/NeedleWork.Application/NeedleWork.Application.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.7.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="12.1.1" />
   </ItemGroup>
 
