feat: create a new purchase

--- a/src/NeedleWork.API/appsettings.json
+++ b/src/NeedleWork.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NeedleWorkCs": "Server=localhost;Database=NeedleWorkDb;User Id=sa;Password=Camundongo@123; TrustServerCertificate=True"
+    "NeedleWorkCs": "Server=localhost;Database=NeedleWodrkDb;User Id=sa;Password=Camundongo@123; TrustServerCertificate=True"
   },
   "Jwt": {
     "SecretKey": "9ccba4e0-0967-4b4e-96cd-bb51f3e0ae0c",
