feat: add user address using ViaCep

--- a/src/NeedleWork.API/appsettings.json
+++ b/src/NeedleWork.API/appsettings.json
@@ -14,6 +14,9 @@
     "SecretKey": "9ccba4e0-0967-4b4e-96cd-bb51f3e0ae0c",
     "Issuer": "NeedleWork",
     "Audience": "NeedleUsers"
+  },
+  "ViaCep": {
+    "Url": "https://viacep.com.br/ws/"
   }
 }
   
