--- a/src/NeedleWork.API/appsettings.json
+++ b/src/NeedleWork.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NeedleWorkCs": "Server=localhost;Database=NeedleWodrkDb;User Id=sa;Password=Camundongo@123; TrustServerCertificate=True",
+    "NeedleWorkCs": "Server=localhost;Database=NeedleWorkDb;User Id=sa;Password=Camundongo@123; TrustServerCertificate=True",
     "RedisCs": "localhost:6379"
   },
   "Jwt": {
